Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1688

Trunk Fails to Build due to C++ style comments

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Trivial
    • Resolution: Fixed
    • None
    • 1.7.0
    • None
    • None
    • Patch

    Description

      Some comments use C++ style (//) comments. Since C90 only recognizes C-style comments, the build fails unless a newer standard (e.g, C99) is specified at compile time.

      The attached patch changes the comments in question from C++ style to C-style.

      Attachments

        1. fix_comments.diff
          2 kB
          Bill Blough

        Activity

          People

            Unassigned Unassigned
            billblough Bill Blough
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: