Replace C++-style comments with C-style comments

C90 does not recognize C++ style comments.  Replace with C-style comments
for compatibility.

Jira:  AXIS2C-1688