src/core/clientapi/svc_client.c
@@ -1295,7 +1295,7 @@ axis2_svc_client_fill_soap_envelope(
             node = axiom_soap_body_get_base_node(soap_body, env);
             if(node)
             {
-				//Get compatibility with anothers Web Services Frameworks, adjust payload with xmlns
+				/* Get compatibility with anothers Web Services Frameworks, adjust payload with xmlns */
 				axiom_element_t *element = (axiom_element_t*)axiom_node_get_data_element(node, env);
 				
 				axiom_attribute_t *attXmlXsi = axiom_attribute_create(env, "xmlns:xsi", "http://www.w3.org/2001/XMLSchema-instance", NULL);
